<resources>
    <string name="app_name">AndroidGithubCiTemplate</string>
    <string name="main_menu" translatable="false">Главное меню</string>
    <string name="new_bottom" translatable="false">Новая заметка</string>
    <string name="roude" translatable="false">Маршрут</string>
    <string name="hike" translatable="false">Подготовка к походу</string>
    <string name="eat" translatable="false">Питание</string>
    <string name="review" translatable="false">Советы и отзывы</string>
    <string name="start" translatable="false">Начать</string>
    <string name="todo">TODO</string>
    <string name="home">HOME</string>
    <string name="back">Back</string>
    <string name="the_participants">Участники :</string>
    <string name="your_hike">Начните поход</string>
    <string name="workload">Загруженность :</string>
    <string name="rest">Отдых :</string>
    <string name="enter_your_name">Введите свое имя</string>
    <string name="hike_on_card">Маршрут на карте</string>
    <string name="persons">Участники :</string>
    <string name="your_in_hike">Вы в походе</string>
    <string name="roude2">Маршрут :</string>
    <string name="new_hike2">Начать</string>
    <string name="greeting">CampingAssistent</string>
    <string name="text_main_menu1">Пока что тут пусто</string>
    <string name="text_main_menu2">Начните новый поход</string>
    <string name="new_person_2">Добавить участника</string>
    <string name="delete">Delete</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addPerson">Добавить участника</string>
    <string name="clear">clear</string>
    <string name="startpoint">startpoint</string>
</resources>
