<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activity.GoHikeActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_id"
        android:layout_width="match_parent"
        android:layout_height="307dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-1dp"
        android:layout_marginLeft="-1dp"
        android:layout_marginTop="243dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="181dp"
        android:orientation="horizontal" />

    <Button
        android:id="@+id/route_bth"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:background="@drawable/ic_rectangle_1__3_"
        android:text="@string/hike_on_card"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="182dp"
        android:text="@string/persons"
        android:textSize="29sp"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="21dp" />

    <Button
        android:id="@+id/imageView2"
        android:layout_width="275dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:background="@drawable/ic_rectangle_1__3_"
        android:text="@string/your_hike"
        android:textSize="23sp"
        android:textStyle="bold" />




</RelativeLayout>