<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fullscreenBackgroundColor"
    android:theme="@style/ThemeOverlay.AndroidGithubCiTemplate.FullscreenContainer"
    tools:context=".fragments.MainFragmentDD">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_id3"
            android:layout_width="412dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="-1dp"
            android:layout_marginLeft="-1dp"
            android:layout_marginTop="243dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="148dp"
            android:orientation="horizontal"
            android:visibility="gone" />


        <Button
            android:id="@+id/addindBrhGoMap"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="60dp"
            android:background="@drawable/ic_rectangle_1__3_"
            android:text="@string/hike_on_card"
            android:textSize="23sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="21dp"
            android:layout_marginLeft="21dp"
            android:layout_marginTop="182dp"
            android:text="@string/persons"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textSize="29sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/editFragment_from_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp">


            <Button
                android:id="@+id/addindBthAdd"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="46dp"
                android:layout_marginRight="38dp"
                android:layout_marginBottom="139dp"
                android:background="@drawable/new_workload"
                android:layout_alignParentRight="true" />

            <TextView
                android:id="@+id/text_your_hike"
                android:layout_width="209dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/imageView2"
                android:layout_alignLeft="@+id/imageView2"
                android:layout_alignTop="@+id/imageView2"
                android:layout_alignEnd="@+id/imageView2"
                android:layout_alignRight="@+id/imageView2"
                android:layout_alignBottom="@+id/imageView2"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="43dp"
                android:layout_marginLeft="43dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="23dp"
                android:layout_marginRight="23dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/aqum_small_caps"
                android:text="@string/your_hike"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="275dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="68dp"
                android:background="@drawable/ic_rectangle_1__3_"
                android:shadowColor="@color/red" />
        </RelativeLayout>



    </RelativeLayout>

</FrameLayout>
</layout>